<resources>
    <string name="app_name">FlashCards</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_deck">Create new deck</string>
    <string name="deck_view">View decks</string>
    <string name="browse_from_files">Browse for .txt files</string>
    <string name="help">Help</string>
    <string name="description">This is a simple flash card app,
                                you can create a deck of flash cards on the device,
                                or use two .txt files that you have created elsewhere.
                                WARNING: Does not check validity of the .txt files.
                                 Your files must have the same number of questions and answers.
                                 </string>
    <string name="next_card">NEXT CARD</string>
    <string name="edit_btn">EDIT CARD</string>
<string name="show_answer_btn">SHOW ANSWER</string>
</resources>
